--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -20,8 +20,8 @@
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
             <!-- <a href="https://github.com/{{ site.github_username }}"> -->
-            <i class="fa fa-phone" data-wow-delay=".1s"></i>
-                <p>(LINE ID) </p>
+            <i class="fa fa-comments-o" data-wow-delay=".1s"></i>
+                <p>(LINE ID) a0989669569</p>
             </a>
         </div>
 
