--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">營業項目</h2>
                 <hr class="light">
                 <p class="text-faded">PC耐力板、PC中空板、壓克力製品、壓克力邊角、PS塑料、MS塑料、ABS塑料、ABS電鍍、鐵氟龍、各種塑膠料、各種粉碎料。</p>
-                <a href="#services" class="btn btn-default btn-xl">回收步驟</a>
+                <a href="#services" class="btn btn-default btn-xl">回收流程</a>
             </div>
         </div>
     </div>
