--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">回收步驟</h2>
+                <h2 class="section-heading">回收流程</h2>
                 <hr class="primary">
             </div>
         </div>
