--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,7 +1,7 @@
   <aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2></h2>
+              <h2>志嘉企業</h2>
               <a href="#contact" class="btn btn-default btn-xl wow tada">立即與我們聯絡</a>
           </div>
       </div>
