google-site-verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="志嘉企業位於新北市樹林區、專營壓克力、PC板、各式塑料回收">
     <meta name="author" content="">
-
+    <meta name="google-site-verification" content="Xty4qe6SUqpotpe2fpACnmkSKFbOvnAu-eTSsXtSFgU" />
+    
     <title>志嘉企業 | 壓克力、PC板、各式塑料回收</title>
 
     <!-- Bootstrap Core CSS -->
@@ -28,5 +29,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 
 </head>
